tests/sfzs/good/06_include_beneath/root.sfz
// SFZ with included region, samples beneath
// Copyright 2006, Leon Dionne

<group>
ampeg_release=0.500

#include "includes/include.sfz"

<region>
sample=samples/sample_1.wav
lokey=g3
hikey=g3
pitch_keycenter=g3
