tests/sfzs/bad/04_missing_include/sfz/root.sfz
// Missing include
// Copyright 2006, Leon Dionne

<group>
ampeg_release=0.500

#include "../includes/include.sfz"

<region>
sample=samples/sample_1.wav
lokey=62
hikey=66
pitch_keycenter=64
